--- a/10_27/Ejercicio tablas/index.html
+++ b/10_27/Ejercicio tablas/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="main_container">
     </div>
-    
+
     <div id="button_container--2">
-        <button onclick="abrirFormulario('Agregar')">Agregar persona</button>
+        <button onclick="abrirFormulario('agregar')">Agregar persona</button>
         <button onclick="abrirFormulario('editar')">Editar persona</button>
       </div>
 
